# keccak-implementation

./: CMakeLists.txt
src/: keccak.c  keccak.h  main.c  technicalities.c  technicalities.h
